2008-05-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.7.pre.in: Fix typo.

	* ipmiconsole/ipmiconsole.conf.5.pre.in: Fix typo.
	
2008-05-20  Albert Chu <chu11@llnl.gov>
  
 	* ipmi-sensors-config/src/ipmi-sensors-config.c
 	(_ipmi_sensors_config): Fix flush corner case.
	
 	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Add forgotten
 	manpage sdr options.

2008-05-16  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/: Fix --eliminate option.
	
2008-05-16  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/ipmipower.8.pre.in: Clarify some text.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-timeout.man: Fix text.

	* ipmipower/ipmipower.8.pre.in: Fix english.
	
2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.c (parse_workaround_flags): Fix
	parsing bug.
	
2008-05-15  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_2.

2008-05-15  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man: Add information
 	on types of errors users may see if their machine has an issue
 	that may be worked around with a workaround.
	
2008-05-15  Lisa Camesano <lisa.camesano@sun.com>

	* common/doc/manpage-common-workaround-text.man: Update with Sun
 	workaround information.

2008-05-13  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-util.c (_get_type_length_bytes): Fix
	corner case when handling binary data on type/length output.

	*
	libfreeipmi/include/freeipmi/record-format/ipmi-fru-information-record-format.h:
	Fix incorrect bit mask.

	* libfreeipmi/include/freeipmi/cmds/ipmi-chassis-cmds.h: Fix boot
	device flags.

	* ipmipower/src/ipmipower_prompt.c (_cmd_power): Fix error message
	output corner case.
	
2008-05-12  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_config.c
	(ipmipower_config_check_values): Fix password length corner case
	check.

	* ipmipower/ipmipower.conf.5.pre.in: Add AUTO as option for
	authentication-type.
